<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    >

    <LinearLayout
        android:layout_width="414dp"
        android:layout_height="729dp"
        android:gravity="center"
        tools:ignore="MissingConstraints"

        android:orientation="vertical">



            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:gravity="center"
                android:text="@string/texto3"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.228" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="221dp"
                android:layout_height="275dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/task"

                />


            <Button
                android:id="@+id/button"
                android:layout_width="143dp"
                android:layout_height="56dp"
                android:background="@drawable/custom_buttom"
                android:gravity="center"
                android:onClick="@string/app_name"
                android:text="@string/texto4"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="703dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>